force-app/main/default/objects/ssot__AssessmentIndicatorDefinition__dlm/fields/ssot__ActivationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActivationStatus__c</fullName>
    <label>Activation Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActivationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>