force-app/main/default/objects/ssot__AssessmentIndicatorDefinition__dlm/fields/ssot__HasProductReference__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasProductReference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Product Reference</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasProductReference</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>