force-app/main/default/objects/ssot__AssessmentIndicatorDefinition__dlm/fields/ssot__IndicatorDataType__c.field-meta.xml
<CustomField>
    <fullName>ssot__IndicatorDataType__c</fullName>
    <label>Indicator Data Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IndicatorDataType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>