force-app/main/default/objects/ssot__AssessmentIndicatorDefinition__dlm/fields/ssot__IndicatorDataTypeName__c.field-meta.xml
<CustomField>
    <fullName>ssot__IndicatorDataTypeName__c</fullName>
    <label>Indicator Data Type Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IndicatorDataTypeName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>