force-app/main/default/objects/ssot__AssessmentIndicatorDefinition__dlm/fields/ssot__IsCompetitorRelevant__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsCompetitorRelevant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Competitor Relevant</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsCompetitorRelevant</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>