force-app/main/default/objects/ssot__AssessmentIndicatorDefinition__dlm/fields/ssot__PrimarySurveyPolicy__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimarySurveyPolicy__c</fullName>
    <label>Primary Survey Policy</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimarySurveyPolicy</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>