force-app/main/default/objects/ssot__AssessmentIndicatorDefinition__dlm/fields/ssot__QuestionContextType__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuestionContextType__c</fullName>
    <label>Question Context Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuestionContextType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>