force-app/main/default/objects/ssot__AssessmentIndicatorDefinition__dlm/fields/ssot__QuestionDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuestionDescription__c</fullName>
    <label>Question Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuestionDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>