force-app/main/default/objects/ssot__AssessmentIndicatorDefinition__dlm/fields/ssot__SurveyCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__SurveyCategory__c</fullName>
    <label>Survey Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SurveyCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>